# smart-nutrition-platform

./: ABRIR_EN_CELULAR.md  CUAL_ES_EL_ERROR.md  FIX_CELULAR.md  FIX_ERROR_IA.md  FIX_POWERSHELL.md  GUIA_RAPIDA_CELULAR.md  INICIAR_APP.md  LISTO_PARA_PROBAR.md  PASOS_FINALES.md  README.md  build.sh  debug_meals.html  render.yaml
backend/: .env.example  .gitignore  CONECTAR_CELULAR.md  EXITO.md  FIX_RAPIDO.md  INSTALL_WINDOWS.md  Procfile  create_food_db.py  food_database.json  install.bat  install.ps1  pyproject.toml  requirements-demo.txt  requirements.txt  start.bat  start.ps1  test_models.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  food_analysis.py  schemas.py  sync.py
backend/src/domain/entities/: food.py  user_profile.py
backend/src/domain/services/: macro_optimizer.py  metabolic_calculator.py
backend/src/infrastructure/auth/: __init__.py  security.py
backend/src/infrastructure/config/: __init__.py  limiter.py  settings.py
backend/src/infrastructure/database/: database.py  init_db.py  models.py
backend/src/services/: food_matcher.py  gemini_vision.py
backend/static/: index.html  manifest.webmanifest  sw.js
backend/static/assets/: index-C3fSfyQ0.js  index-F6c6KIwe.css  web-CcEcTiFr.js
backend/tests/: conftest.py
backend/tests/unit/: test_metabolic_calculator.py
frontend/: README_MOBILE.md  capacitor.config.ts  index.html  package-lock.json  package.json  start.bat  tailwind.config.js  vite.config.ts
frontend/android/app/: build.gradle
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
(+36 files in other folders)
